Tariff description extracted from tariff
