# src/Infrastructure/Http/Openapi/schema/stoplight.yaml
@@ -129,7 +129,7 @@ paths:
         - admin
   /admin/tariffDescription/show:
     get:
-      summary: show tariff details
+      summary: show tariff description
       tags:
         - tariff
         - admin
@@ -528,6 +528,26 @@ paths:
                   - data
       operationId: get-admin-eventDomain-list
       description: list of event domains
+  /admin/tariffDescription/create:
+    post:
+      summary: create tariff description
+      operationId: post-admin-tariffDescription-create
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: ./emptyResponse.v1.json
+      description: create tariff description
+      tags:
+        - admin
+        - tariff
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: ./tariffDescription/tariffDescription.v1.json
 components:
   schemas: {}
   securitySchemes: {}
